src/types/tests/snapshots/tgbot__types__tests__message__live_photo.snap
---
source: src/types/tests/message.rs
expression: expected_struct
---
{
  "chat": {
    "type": "supergroup",
    "id": 1,
    "title": "Chat"
  },
  "date": 1,
  "has_protected_content": false,
  "message_id": 1,
  "is_automatic_forward": false,
  "from": {
    "first_name": "User",
    "id": 1,
    "is_bot": false
  },
  "live_photo": {
    "duration": 1,
    "file_id": "fid",
    "file_unique_id": "fuid",
    "height": 200,
    "width": 300
  }
}
