src/types/tests/snapshots/tgbot__types__tests__message__message_origin_chat.snap
---
source: src/types/tests/message.rs
expression: "MessageOrigin::from(MessageOriginChat::new(0, GroupChat::new(1, \"test\")))"
---
{
  "type": "chat",
  "date": 0,
  "sender_chat": {
    "type": "group",
    "id": 1,
    "title": "test"
  }
}
