src/types/tests/snapshots/tgbot__types__tests__message__message_origin_hidden_user.snap
---
source: src/types/tests/message.rs
expression: "MessageOrigin::from(MessageOriginHiddenUser::new(0, \"test\"))"
---
{
  "type": "hidden_user",
  "date": 0,
  "sender_user_name": "test"
}
